After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 114777 - Text export of accented characters broken
Text export of accented characters broken
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export Text
1.1.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-06-09 15:12 UTC by J.H.M. Dassen (Ray)
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description J.H.M. Dassen (Ray) 2003-06-09 15:12:03 UTC
[Originally reported as http://bugs.debian.org/189281]

From: Toni Mueller <support@oeko.net>
Subject: gnumeric: exporting to text mangles LATIN1 characters to escape
	sequence

Package: gnumeric
Version: 1.1.16-6
Severity: normal
Tags: upstream


Hello,

exporting a spreadsheet with accented characters, eg. german umlauts,
yields a file with escape sequences consisting of octal 303 followed by
another byte that should indicate what character was intended (ie,
octal 174 for lower case u umlaut) in place for the accented
characters. There doesn't appear to be a way to adjust how this
is handled, and it prevents reimporting the resulting CSV file as a
spread sheet.
Comment 1 J.H.M. Dassen (Ray) 2003-06-09 15:14:27 UTC
Testing with 1.1.19, things seem to have gotten worse. I've tested
using  lines from latin1(8) and exported File -> Save As -> Text
export (configurable) -> Character encoding: Locale: Western
(ISO-8859-1) and in the resulting file the 8-bit characters have all
been replaced by "ÿ¿¿¿¿¿".
Comment 2 Andreas J. Guelzow 2003-06-11 06:13:15 UTC
This bug is not surprising:

we convert the utf8 content of the cell into the appropriate encoding
and then we check the string whether we need to quote anything
assuming that we still have utf8...  
Comment 3 Andreas J. Guelzow 2003-06-11 13:05:30 UTC
fixed in cvs