http://bugzilla.gnome.org/show_bug.cgi?id=114777 quote content before

2003-06-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=114777
	* src/stf-export.c (stf_export_cell): quote content before
	converting it into some other encoding. (fix leaks on the side)